--- a/index.html
+++ b/index.html
@@ -6,69 +6,109 @@
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
-      background: url('https://i.imgur.com/J5Z5Z5Z.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background: #fdf2f5;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
       font-family: 'Dancing Script', cursive;
       overflow: hidden;
+      position: relative;
     }
 
-    .letter-container {
+    /* Fondo de carta vintage */
+    .letter-paper {
       width: 80%;
       max-width: 600px;
-      background-color: rgba(255, 245, 240, 0.9);
-      padding: 40px;
-      border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+      min-height: 500px;
+      background: #fff9fb;
+      padding: 50px 40px;
       position: relative;
-      border: 1px solid #e8c4c4;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      border: 1px solid #f0d6df;
       transform: rotate(-1deg);
+      background-image: 
+        linear-gradient(#fff9fb 99%, transparent 99%),
+        linear-gradient(90deg, transparent 49%, #f8e1ea 49%, #f8e1ea 51%, transparent 51%);
+      background-size: 100% 30px, 30px 100%;
     }
 
-    .letter-container::before {
+    /* Efecto de borde decorativo */
+    .letter-paper::before {
       content: "";
       position: absolute;
-      top: 10px;
-      left: 10px;
-      right: 10px;
-      bottom: 10px;
-      border: 1px dashed #e8c4c4;
+      top: 15px;
+      left: 15px;
+      right: 15px;
+      bottom: 15px;
+      border: 1px dashed #f0d6df;
       pointer-events: none;
-      border-radius: 5px;
     }
 
+    /* Encabezado */
     .header {
       text-align: center;
-      font-size: 2.5em;
+      font-size: 2.3rem;
       color: #d23669;
-      margin-bottom: 20px;
-      text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
+      font-weight: 700;
     }
 
+    /* Contenido de la carta */
     .message {
+      font-size: 1.4rem;
+      line-height: 2;
+      color: #5e3d3d;
       text-align: center;
-      font-size: 1.5em;
-      line-height: 1.8;
-      color: #555;
-      margin: 30px 0;
+      margin: 0 auto;
+      max-width: 80%;
     }
 
+    /* Lista con viñetas especiales */
+    .love-list {
+      list-style: none;
+      margin: 25px auto;
+      padding-left: 0;
+      text-align: center;
+    }
+
+    .love-list li {
+      position: relative;
+      margin: 15px 0;
+      padding-left: 30px;
+    }
+
+    .love-list li::before {
+      content: "❤";
+      position: absolute;
+      left: 0;
+      color: #ff6b81;
+    }
+
+    /* Firma */
     .signature {
       text-align: center;
-      font-size: 1.8em;
+      font-size: 1.6rem;
       color: #d23669;
       margin-top: 40px;
-      font-weight: bold;
+      font-weight: 700;
     }
 
-    .hearts {
+    /* Fecha */
+    .date {
+      text-align: right;
+      color: #b88a8a;
+      font-size: 1rem;
+      margin-bottom: 20px;
+    }
+
+    /* Corazones flotantes */
+    .floating-hearts {
       position: absolute;
       width: 100%;
       height: 100%;
       pointer-events: none;
+      z-index: -1;
     }
 
     .heart {
@@ -78,10 +118,10 @@
       background: #ff6b81;
       transform: rotate(45deg);
       opacity: 0;
-      animation: float 6s linear infinite;
+      animation: float 8s linear infinite;
     }
 
-    .heart:before, .heart:after {
+    .heart::before, .heart::after {
       content: "";
       position: absolute;
       width: 20px;
@@ -90,36 +130,31 @@
       border-radius: 50%;
     }
 
-    .heart:before { top: -10px; }
-    .heart:after { left: -10px; }
+    .heart::before { top: -10px; }
+    .heart::after { left: -10px; }
 
     @keyframes float {
-      0% { transform: translateY(0) rotate(45deg); opacity: 0; }
-      10% { opacity: 0.6; }
-      100% { transform: translateY(-100vh) rotate(45deg); opacity: 0; }
-    }
-
-    .date {
-      text-align: right;
-      color: #888;
-      font-size: 1em;
-      margin-bottom: 20px;
+      0% { transform: translateY(100vh) rotate(45deg); opacity: 0; }
+      20% { opacity: 0.6; }
+      100% { transform: translateY(-100px) rotate(45deg); opacity: 0; }
     }
   </style>
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="hearts" id="hearts"></div>
+  <div class="floating-hearts" id="hearts-container"></div>
   
-  <div class="letter-container">
-    <div class="date" id="fecha"></div>
+  <div class="letter-paper">
+    <div class="date" id="current-date"></div>
     <h1 class="header">✨ ¡Feliz Día de las Madres! ✨</h1>
     
     <div class="message">
       <p>"Mamá y Abuelita, hoy celebro el amor más grande que conozco: el de ustedes dos.</p>
       
-      <p>Mamá, por ser mi refugio y mi ejemplo.<br>
-      Abuelita, por ser mi raíz llena de ternura y sabiduría.</p>
+      <ul class="love-list">
+        <li>Mamá, por ser mi refugio y mi ejemplo.</li>
+        <li>Abuelita, por ser mi raíz llena de ternura y sabiduría.</li>
+      </ul>
 
       <p>Juntas han tejido mi vida con bendiciones, risas y calor de hogar.</p>
     </div>
@@ -131,19 +166,25 @@
   </div>
 
   <script>
-    // Fecha actual
-    const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-    document.getElementById('fecha').innerText = new Date().toLocaleDateString('es-ES', options);
+    // Fecha actual en español
+    const dateOptions = { 
+      weekday: 'long', 
+      year: 'numeric', 
+      month: 'long', 
+      day: 'numeric' 
+    };
+    document.getElementById('current-date').textContent = 
+      new Date().toLocaleDateString('es-ES', dateOptions);
 
-    // Corazones flotantes
-    const heartsContainer = document.getElementById('hearts');
-    for (let i = 0; i < 15; i++) {
+    // Generar corazones flotantes
+    const container = document.getElementById('hearts-container');
+    for (let i = 0; i < 20; i++) {
       const heart = document.createElement('div');
       heart.className = 'heart';
       heart.style.left = Math.random() * 100 + 'vw';
-      heart.style.animationDelay = Math.random() * 5 + 's';
+      heart.style.animationDelay = Math.random() * 3 + 's';
       heart.style.width = heart.style.height = (15 + Math.random() * 20) + 'px';
-      heartsContainer.appendChild(heart);
+      container.appendChild(heart);
     }
   </script>
 </body>
