--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Carta para Mamá y Abuelita</title>
+  <title>Carta para Titi y Melvita</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
@@ -16,20 +16,20 @@
       position: relative;
     }
 
-    /* Fondo de carta vintage */
+    /* Fondo de carta vintage - MÁS OSCURO */
     .letter-paper {
       width: 80%;
       max-width: 600px;
       min-height: 500px;
-      background: #fff9fb;
+      background: #fff0f5;  /* Color más oscuro que antes */
       padding: 50px 40px;
       position: relative;
       box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-      border: 1px solid #f0d6df;
+      border: 1px solid #e8c4d0;  /* Borde más oscuro */
       transform: rotate(-1deg);
       background-image: 
-        linear-gradient(#fff9fb 99%, transparent 99%),
-        linear-gradient(90deg, transparent 49%, #f8e1ea 49%, #f8e1ea 51%, transparent 51%);
+        linear-gradient(#fff0f5 99%, transparent 99%),  /* Coincide con el nuevo color */
+        linear-gradient(90deg, transparent 49%, #f5d1e0 49%, #f5d1e0 51%, transparent 51%);
       background-size: 100% 30px, 30px 100%;
     }
 
@@ -41,7 +41,7 @@
       left: 15px;
       right: 15px;
       bottom: 15px;
-      border: 1px dashed #f0d6df;
+      border: 1px dashed #e8c4d0;  /* Borde más oscuro */
       pointer-events: none;
     }
 
@@ -49,7 +49,7 @@
     .header {
       text-align: center;
       font-size: 2.3rem;
-      color: #d23669;
+      color: #c22758;  /* Color más intenso */
       margin-bottom: 30px;
       font-weight: 700;
     }
@@ -82,14 +82,14 @@
       content: "❤";
       position: absolute;
       left: 0;
-      color: #ff6b81;
+      color: #ff477e;  /* Corazón más oscuro */
     }
 
     /* Firma */
     .signature {
       text-align: center;
       font-size: 1.6rem;
-      color: #d23669;
+      color: #c22758;  /* Color más intenso */
       margin-top: 40px;
       font-weight: 700;
     }
@@ -115,7 +115,7 @@
       position: absolute;
       width: 20px;
       height: 20px;
-      background: #ff6b81;
+      background: #ff477e;  /* Corazón más oscuro */
       transform: rotate(45deg);
       opacity: 0;
       animation: float 8s linear infinite;
@@ -126,7 +126,7 @@
       position: absolute;
       width: 20px;
       height: 20px;
-      background: #ff6b81;
+      background: #ff477e;  /* Corazón más oscuro */
       border-radius: 50%;
     }
 
@@ -149,11 +149,11 @@
     <h1 class="header">✨ ¡Feliz Día de las Madres! ✨</h1>
     
     <div class="message">
-      <p>"Mamá y Abuelita, hoy celebro el amor más grande que conozco: el de ustedes dos.</p>
+      <p>"Titi y Melvita, hoy celebro el amor más grande que conozco: el de ustedes dos.</p>
       
       <ul class="love-list">
-        <li>Mamá, por ser mi refugio y mi ejemplo.</li>
-        <li>Abuelita, por ser mi raíz llena de ternura y sabiduría.</li>
+        <li>Titi, por ser mi refugio y mi ejemplo.</li>
+        <li>Melvita, por ser mi raíz llena de ternura y sabiduría.</li>
       </ul>
 
       <p>Juntas han tejido mi vida con bendiciones, risas y calor de hogar.</p>
